--- a/Examen de DBP/web/WEB-INF/web.xml
+++ b/Examen de DBP/web/WEB-INF/web.xml
@@ -5,11 +5,11 @@
          version="4.0">
 <!--    Esta es otra forma de usar los servlet-->
     <servlet>
-        <servlet-name>servlet1</servlet-name>
-        <servlet-class>Servlet</servlet-class>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>servlet1</servlet-name>
+        <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
 </web-app>
